# ChattingOn

./: CMakeLists.txt  vcpkg.json
config/: config.json
src/client/: client.cpp  client.h  main.cpp  tcp_client.cpp  tcp_client.h  udp_client.cpp  udp_client.h
src/common/: audio_handler.cpp  audio_handler.h  audio_packet.cpp  audio_packet.h  control_message.cpp  control_message.h  jitter_buffer.cpp  jitter_buffer.h  network_utils.cpp  network_utils.h
src/server/: main.cpp  room_manager.cpp  room_manager.h  server.cpp  server.h  tcp_server.cpp  tcp_server.h  udp_server.cpp  udp_server.h
tests/: CMakeLists.txt
